更新idea和谷歌浏览器安装